--- a/InstaPrj/src/main/resources/templates/feeds/modify.html
+++ b/InstaPrj/src/main/resources/templates/feeds/modify.html
@@ -2,11 +2,9 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
   <th:block th:fragment="content">
-    <div class="m-5">
-    <h1 class="mt-4">Feeds Modify Page</h1>
     <style>
       .form-group {margin-bottom: 30px;}
-      .uploadResult {width: 100%;background:gray;margin-top:10px;}
+      .uploadResult {width: 100%;margin-top:10px;}
       .uploadResult ul {
         display: flex;flex-flow:row;justify-content:center;
         align-items:center;vertical-align:top;overflow: auto;
@@ -14,31 +12,37 @@
       .uploadResult ul li {list-style:none;padding:10px;margin-left:2em;}
       .uploadResult ul li img {width: 100px;}
     </style>
+    <div class="m-5">
+    <h1 class="mt-4 text-primary fw-bold fs-2">Feeds Modify Page</h1>
     <form th:action="@{/feeds/modify}" th:method="post" id="frmSend">
       <div class="form-group">
-        <label>Mno</label>
+        <label class=" fw-bold fs-4">FNO</label>
         <input type="text" th:value="${feedsDTO.fno}" name="fno" class="form-control" readonly>
       </div>
       <div class="form-group">
-        <label>Title</label>
+        <label class=" fw-bold fs-4">Title</label>
         <input type="text" name="title" th:value="${feedsDTO.title}" class="form-control">
       </div>
+      <div class="form-group">
+        <label for="content" class="mt-4 fw-bold fs-4">Content</label>
+        <input class="form-control" th:value="${feedsDTO.content}" name="content" id="content" style="height: 100px">
+      </div>
       <div style="margin-bottom: 30px;">
-        <label>Review Count</label>
+        <label class=" fw-bold fs-4">Review Count</label>
         <input type="text" name="reviewsCnt" class="form-control" readonly th:value="${feedsDTO.reviewsCnt}">
       </div>
       <div class="form-group">
-        <label>RegDate</label>
+        <label class=" fw-bold fs-4">RegDate</label>
         <input type="text" class="form-control"
                th:value="${#temporals.format(feedsDTO.regDate, 'yyyy/MM/dd HH:mm:ss')}" readonly>
       </div>
       <div class="form-group">
-        <label>ModDate</label>
+        <label class=" fw-bold fs-4">ModDate</label>
         <input type="text" class="form-control"
                th:value="${#temporals.format(feedsDTO.modDate, 'yyyy/MM/dd HH:mm:ss')}" readonly>
       </div>
       <div class="form-group">
-        <label for="fileInput">Select Image Files</label>
+        <label for="fileInput" class=" fw-bold fs-4">Select Image Files</label>
         <input type="file" id="fileInput" class="custom-file-input form-control files"
                multiple></input>
         <label id="custom-label"></label>
@@ -167,6 +171,8 @@
         e.preventDefault() // 유효성검사 넣어줄 것!
         const title = document.querySelector("input[name='title']")
         if(title.value == "") {title.focus();return false;}
+        const content = document.querySelector("input[name='content']")
+        if(content.value == "") {content.focus();return false;}
 
         let str = "";
         const liArr = document.querySelectorAll(".uploadResult ul li");
