--- a/InstaPrj/src/main/resources/templates/layout/basic.html
+++ b/InstaPrj/src/main/resources/templates/layout/basic.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="ko"  xmlns:th="http://www.thymeleaf.org">
+<html lang="ko"  xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <th:block th:fragment="setContent(content)">
 <head>
     <meta charset="utf-8" />
@@ -13,8 +14,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link th:href="@{/css/styles.css}" rel="stylesheet" />
+
 </head>
 <body>
+<!--유저의 role에 따라서 다음 태그가 보임-->
+<div sec:authorize="hasRole('USER')">Has USER_ROLE</div>
+<div sec:authorize="hasRole('MANAGER')">Has USER_MANAGER</div>
+<div sec:authorize="hasRole('ADMIN')">Has USER_ADMIN</div>
 <!-- Section-->
 <section >
     <div class="container-fluid p-0">
