--- a/InstaPrj/src/main/resources/templates/feeds/read.html
+++ b/InstaPrj/src/main/resources/templates/feeds/read.html
@@ -178,15 +178,16 @@
                      <input type="text" class="form-control" name="text" value="${text}">
                     `
                     //선택 카드, 버튼 부분 UI
+  
                   document.querySelector(".modal-footer").innerHTML =
                     `
-                    ${loggedInUserId === reviewOwnerId ? '' : `
-                    <button type="button" class="btn btn-danger remove">리뷰 삭제</button>
-                    <button type="button" class="btn btn-warning modify">리뷰 수정</button>
-                    `}
-                      <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
-                    `
-                    //선택한 리뷰, 수정하기 버튼
+                    ${loggedInUserId === reviewOwnerId ? `
+                        <button type="button" class="btn btn-danger remove">리뷰 삭제</button>
+                        <button type="button" class="btn btn-warning modify">리뷰 수정</button>
+                    ` : ''}
+                    <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
+                    `;
+                  //선택한 리뷰, 수정하기 버튼
                   document.querySelector(".modal-footer .modify").onclick = function () {
                     let reviewsnum = document.querySelector(".modal-body input[name='reviewsnum']")
                     let text = document.querySelector(".modal-body input[name='text']")
@@ -241,7 +242,6 @@
               }
             });
           }
-
           ///////////////////////////////////// 날짜 형식 맞춤 함수  //////////////////////////////////
           function formatDateTime(str) {
             const date = new Date(str)
