--- a/InstaPrj/src/main/resources/templates/layout/basic.html
+++ b/InstaPrj/src/main/resources/templates/layout/basic.html
@@ -18,9 +18,9 @@
 </head>
 <body>
 <!--유저의 role에 따라서 다음 태그가 보임-->
-<div sec:authorize="hasRole('USER')">Has USER_ROLE</div>
+<!--<div sec:authorize="hasRole('USER')">Has USER_ROLE</div>
 <div sec:authorize="hasRole('MANAGER')">Has USER_MANAGER</div>
-<div sec:authorize="hasRole('ADMIN')">Has USER_ADMIN</div>
+<div sec:authorize="hasRole('ADMIN')">Has USER_ADMIN</div>-->
 <!-- Section-->
 <section >
     <div class="container-fluid p-0">
