--- a/InstaPrj/src/main/resources/templates/feeds/read.html
+++ b/InstaPrj/src/main/resources/templates/feeds/read.html
@@ -161,9 +161,10 @@
             fetch(url + fno + "/all", { method: 'GET', })
               .then(response => response.json())
               .then(data => {
-                // console.log(data)
+                  console.log(data)
                 let str = "";
                 for (let i = 0; i < data.length; i++) {
+
                   str = str + `<div class="card-body form-control mb-1"
                 onmouseover="this.style.background='#d6e6ff'"
                 onmouseout="this.style.background='white'"
@@ -218,6 +219,7 @@
 
                       //선택한 리뷰, 수정하기 버튼
                       document.querySelector(".modal-footer .modify").onclick = function () {
+
                         let reviewsnum = document.querySelector(".modal-body input[name='reviewsnum']")
                         let text = document.querySelector(".modal-body input[name='text']")
                         let cno = document.querySelector(".modal-body input[name='cno']")
@@ -315,8 +317,8 @@
             document.querySelector('#exampleModalLabel').textContent = '리뷰 추가'
             document.querySelector(".modal-body").innerHTML =
               `
-             <!-- <input type="text" class="form-control" name="cno" placeholder="Member ID(cno)">-->
-              <span name="cno">[[${ #authentication.name }]]</span>
+<!--          <span name="cno" class="form-control" value="">[[${ #authentication.name }]]</span>-->
+              <input type="text" class="form-control" name="cno" value="cno" >
               <input type="text" class="form-control" name="text" placeholder="Review Text...">
               `
             document.querySelector(".modal-footer").innerHTML =
@@ -326,7 +328,8 @@
               `
             // 모달창에서 댓글 추가하기 버튼 처리
             document.querySelector(".modal-footer .save").onclick = function () {
-               let cno = document.querySelector(".modal-body span[name='cno']").textContent;
+<!--           let cno = document.querySelector(".modal-body span[name='cno']").textContent;-->
+               let cno = document.querySelector(".modal-body input[name='cno']").value;
                let text = document.querySelector(".modal-body input[name='text']").value;
 
                 if (!text) {
@@ -340,6 +343,7 @@
                 }
                 let reviews = { fno: fno, text: text, cno: cno };
                 const url = /*[[@{/reviews/}]]*/'url';
+
                 console.log("Original Object:", reviews);           // 변환 전 객체를 출력
                 console.log("Stringified Object:", JSON.stringify(reviews));  // 변환된 문자열을 출력
 
