--- a/InstaPrj/src/main/resources/templates/feeds/read.html
+++ b/InstaPrj/src/main/resources/templates/feeds/read.html
@@ -218,7 +218,7 @@
                          <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
                       `
 
-                      //선택한 리뷰, 수정하기 버튼
+                      ////////////////////////선택한 리뷰, 수정하기 버튼 //////////////////////
                       document.querySelector(".modal-footer .modify").onclick = function () {
 
                         let reviewsnum = document.querySelector(".modal-body input[name='reviewsnum']")
@@ -235,6 +235,7 @@
                           fno: fno, text: text.value, cno: cno.value
                           , reviewsnum: reviewsnum.value
                         }
+
                         const url = /*[[@{/reviews/}]]*/'url';
                         fetch(url + fno + "/" + reviewsnum.value, {
                           method: 'PUT',
@@ -251,11 +252,12 @@
                           })
                           .catch(err => console.log('myError', err))
                       }
-                      // 댓글 삭제 버튼
+                      ////////////////////// 댓글 삭제 버튼 ////////////////////////////////////
                       document.querySelector(".modal-footer .remove").onclick = function () {
                         let reviewsnum = document.querySelector(
                           ".modal-body input[name='reviewsnum']")
                         const url = /*[[@{/reviews/}]]*/'url';
+                        console.log(">> reviewsnum:", reviewsnum.value);
                         fetch(url + fno + "/" + reviewsnum.value, {
                           method: 'DELETE',
                           headers: { 'Content-type': 'application/json' },
@@ -318,8 +320,7 @@
             document.querySelector('#exampleModalLabel').textContent = '리뷰 추가'
             document.querySelector(".modal-body").innerHTML =
               `
-             <span name="cno" class="form-control">[[${ #authentication.principal.cno }]]</span>
-              //<input type="text" class="form-control" name="cno" value="cno" >
+              <span>[[${ #authentication.name }]]</span>
               <input type="text" class="form-control" name="text" placeholder="Review Text...">
               `
             document.querySelector(".modal-footer").innerHTML =
@@ -329,7 +330,7 @@
               `
             // 모달창에서 댓글 추가하기 버튼 처리
             document.querySelector(".modal-footer .save").onclick = function () {
-               let cno = document.querySelector(".modal-body span[name='cno']").textContent;
+               let cno = [[${ #authentication.principal.cno }]];
                //let cno = document.querySelector(".modal-body input[name='cno']").value;
                let text = document.querySelector(".modal-body input[name='text']").value;
 
